pamc/src/tests/sample_code/should_fail/scope/ref_let_in_body.ph
type U {
    .U: U,
}

let plus = fun plus(a: U, b: U): U { U.U };

let a = plus(a, a);
